--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -54,6 +54,7 @@
     <string name="setting_trust_click_disabled">Android 12 以下所有点击均受信任</string>
     <string name="setting_logs">日志</string>
     <string name="setting_logs_desc">显示日志</string>
+    <string name="setting_languages">语言</string>
 
     <string name="logcat_clear">清除日志</string>
     <string name="logcat_share">共享日志</string>
