--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -55,6 +55,7 @@
     <string name="setting_trust_click_disabled">Android 12 以前嘅所有點擊都係受到信任嘅</string>
     <string name="setting_logs">日誌</string>
     <string name="setting_logs_desc">顯示日誌</string>
+    <string name="setting_languages">語言</string>
 
     <string name="logcat_clear">清除日誌</string>
     <string name="logcat_share">分享日誌</string>
